# nbsanity

./: Cargo.toml  README.md  pyproject.toml  schema.json
examples/: hello.ipynb  hello_ipynb.json  untitled.ipynb
src/: checks.rs  config.rs  main.rs  notebook.rs
