[package]
name = "nbsanity"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Jupyter Notebook Linter"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.11"
glob = "0.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
structopt = "0.3.26"
toml = "0.5.10"
