[package]
name = "nbsanity"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Jupyter Notebook Linter"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
enum_dispatch = "0.3.11"
glob = "0.3.1"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strsim = "0.10.0"
structopt = "0.3.26"
toml = "0.5.10"
