[package]
name = "nbsanity"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Jupyter Notebook Linter"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
enum-iterator = "1.3.0"
enum_dispatch = "0.3.11"
glob = "0.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strsim = "0.10.0"
structopt = "0.3.26"
strum = "0.24.1"
strum_macros = "0.24.3"
toml = "0.5.10"


[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
